<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_multiplication"
        android:id="@+id/cb_multiplication"/>

    <!---
    括号功能 尚未实现

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_brackets"
        android:visibility="gone"/>
    -->

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_negativeNumber"
        android:id="@+id/cb_negativeNumber"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_decimal"
        android:id="@+id/cb_decimal"/>

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:hint="@string/ed_decimal"
        android:visibility="gone"
        android:id="@+id/ed_decimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_range"/>

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/ed_numberRange"
        android:hint="@string/ed_default"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_amount"/>

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/ed_amount"
        android:inputType="number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_confirm"
        android:id="@+id/but_confirm"/>

</LinearLayout>